--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="description" content="Tactical Combat Casualty Care Medical Monitoring System" />
     <meta name="author" content="Medical Command" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg" />
+    <link rel="shortcut icon" type="image/jpeg" href="/logo.jpeg" />
+    <link rel="apple-touch-icon" href="/logo.jpeg" />
+
     <meta property="og:title" content="TCCC Medical Monitor" />
     <meta property="og:description" content="Real-time vital signs monitoring for tactical combat casualty care" />
     <meta property="og:type" content="website" />
